--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
   - yarn test --watchAll=false
   - yarn build
 on:
-  branch: main
+  branch: master
 deploy:
   provider: heroku
   api_key: $HEROKU_KEY
